// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should view 1 expense totalling $195.00 1`] = `
<div>
  <h3>
    Viewing 
    1
     
    expense
    , totalling 
    $195.00
  </h3>
</div>
`;

exports[`should view 2 expenses totalling $4,695.00 1`] = `
<div>
  <h3>
    Viewing 
    2
     
    expenses
    , totalling 
    $4,695.00
  </h3>
</div>
`;
